--- a/week 2/index.html
+++ b/week 2/index.html
@@ -1,6 +1,13 @@
-<header></header>
-<dfn>
-
-</dfn>
-
-<dfn>  </dfn>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我的第一个网页</title>
+</head>
+<body>
+    <h1>欢迎来到我的网页</h1>
+    <p>这是一个简单的网页示例，用于演示 HTML 的基本结构。</p>
+    <img src="https://via.placeholder.com/150" alt="占位图像">
+</body>
+</html>
